syntax = "proto3";

package determined.resourcepool.v1;
option go_package = "github.com/determined-ai/determined/proto/pkg/resourcepoolv1";



// A Resource Pool is a pool of resources where containers are run.
message ResourcePool {
  // The unique id of the resource pool.
  string id = 1;
  // The description of the resource pool
  string description = 2;
  // The type of the resource pool (AWS/GCP/static)
  string type = 3;
  // The number of agents running in the resource pool
  int32 numAgents = 4;
  // The total number of slots that exist in the resource pool
  int32 slotsAvailable = 5;
  // The number of slots that are actively running workloads
  int32 slotsUsed=6;
  // The max number of CPU containers that can run in this resource pool
  int32 cpuContainerCapacity = 7;
  // The current number of CPU containers running in this resource pool
  int32 cpuContainersRunning = 8;
  // Is this resource pool the default GPU pool?
  bool defaultGpuPool=9;
  // Is this resource pool the default CPU pool?
  bool defaultCpuPool=10;
  // Is this resource pool using preemptible/spot instances? Only meaningful in an AWS or GCP resource pool.
  bool preemptible=11;
  // When using dynamic agents, the minimum number of agents that can exist in the resource pool.
  int32 minAgents=12;
  // When using dynamic agents, the maximum number of agents that can exist in the resource pool.
  int32 maxAgents=13;
  // The maximum number of CPU containers that can run on an individual agent
  int32 cpuContainerCapacityPerAgent=15;
  // The type of the scheduler. Either 'fair share', 'priority', or 'round robin'
  string schedulerType=16;
  // The fitting policy of the scheduler.
  string schedulerFittingPolicy=17;
  // The location of the resource pool. For AWS this returns the region and for GCP this return the zone.
  string location=18;
  // The VM image used for the agents when using dynamic agents.
  string imageId=19;
  // The instance type of the agents when using dynamic agents. For AWS this is the Instance Type. For GCP
  // this is the machine type combined with the number and types of GPUs. To work with this data
  // programattically, we recommend working with the ResourcePool.details.aws.instanceType and
  // ResourcePool.details.gcp.machineType/gpuType/gpuNum.
  string instanceType=20;

  // The url of the Determined master
  string masterUrl=21;
  // A hostname for which the masterâ€™s TLS certificate is valid, if the host specified
  // by the master_url option is an IP address or is not contained in the certificate
  string masterCertName=22;
  // The startup script for the agent. This runs on the node the agent runs on.
  string startupScript=23;
  // The startup script for the agent's container. This runs in the container determined-agent runs in.
  string containerStartupScript=24;
  // The Docker network to use for the agent when using dynamic agents.
  string agentDockerNetwork=25;
  // The docker runtime to use for the agent when using dynamic agents
  string agentDockerRuntime=26;
  // The docker image to use for the agent when using dynamic agents
  string agentDockerImage=27;
  // The Fluent docker image to use
  string agentFluentImage=28;
  // The maximum idle period of agents. The master waits for this period of time
  // before shutting down idle agents.
  string maxIdleAgentPeriod=29;
  // The maximum starting period of agents. The master waits for this period of time for starting
  // agents before retrying.
  string maxAgentStartingPeriod=30;

  determined.resourcepool.v1.ResourcePoolDetail details=31;
}

// Detailed information about the resource pool
message ResourcePoolDetail {
  // AWS-specific details
  determined.resourcepool.v1.ResourcePoolAwsDetail aws=1;
  // GCP-specific details
  determined.resourcepool.v1.ResourcePoolGcpDetail gcp=2;
  // Priority scheduler-specific details
  determined.resourcepool.v1.ResourcePoolPrioritySchedulerDetail priorityScheduler=3;
}

// List of arbitrary user-defined tags that are added to the Determined agent instances
message AwsCustomTag {
  // The key of the custom tag
  string key=1;
  // The value of the custom tag
  string value=2;
}

message ResourcePoolAwsDetail {
  // The region the resource pool exists in
  string region=1;
  //  Size of the root volume of the Determined agent in GB
  int32 rootVolumeSize=2;
  // The AMI ID of the Determined agent
  string imageId=3;
  // Key for tagging the Determined agent instances
  string tagKey=4;
  // Value for tagging the Determined agent instances
  string tagValue=5;
  // Name to set for the Determined agent instances
  string instanceName=6;
  // The name of the SSH key registered with AWS for SSH key access to the agent instances
  string sshKeyName=7;
  // Whether to use public IP addresses for the Determined agent
  bool publicIp=8;
  // The ID of the subnet to run the Determined agents in
  string subnetId=9;
  // The ID of the security group to run the Determined agents as
  string securityGroupId=10;
  // The Amazon Resource Name (ARN) of the IAM instance profile to attach to the agent instances.
  string iamInstanceProfileArn=11;
  // AWS instance type to use for dynamic agents
  string instanceType=12;
  string logGroup=13;
  string logStream=14;
  // Whether to use spot instances
  bool spotEnabled=15;
  //  The maximum price per hour to pay for a spot instance
  string spotMaxPrice=16;
  repeated determined.resourcepool.v1.AwsCustomTag customTags=17;
}

message ResourcePoolGcpDetail {
  // The project ID of the GCP resources used by Determined
  string project=1;
  // The zone of the GCP resources used by Determined
  string zone=2;
  // Size of the root volume of the Determined agent in GB
  int32 bootDiskSize=3;
  // The boot disk source image of the Determined agent
  string bootDiskSourceImage=4;
  // Key for labeling the Determined agent instances.
  string labelKey=5;
  //  Value for labeling the Determined agent instances
  string labelValue=6;
  //  Name prefix to set for the Determined agent instances
  string namePrefix=7;
  // Network resource for the Determined agent instances
  string network=8;
  // Subnetwork resource for the Determined agent instances
  string subnetwork=9;
  // Whether to use external IP addresses for the Determined agent instances
  bool externalIp=10;
  // The network tags to set firewalls for the Determined agent instances
  repeated string networkTags=11;
  //  Email of the service account for the Determined agent instances.
  string serviceAccountEmail=12;
  //  List of scopes authorized for the Determined agent instances
  repeated string serviceAccountScopes=13;
  // Type of machine for the Determined agents
  string machineType=14;
  // Type of GPU for the Determined agents
  string gpuType=15;
  // Number of GPUs for the Determined agents
  int32 gpuNum=16;
  // Whether to use preemptible instances
  bool preemptible=17;
  // The timeout period for tracking a GCP operation
  string operationTimeoutPeriod=18;
}

// Details related to the priority scheduler. This will only be present if the schedulerType=priority
message ResourcePoolPrioritySchedulerDetail {
  // Whether lower priority tasks should be preempted to schedule higher priority tasks
  bool preemption=1;
  // The priority that is assigned to tasks that do not explicitly specify a priority.
  int32 defaultPriority=2;
}